[package]
name = "lt-kafka"
version = "0.1.0"
authors = ["Ilya Kramer <ilya@lightricks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lt_kafka"
crate-type = ["dylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dependencies]
rdkafka = { version = "0.25.0", default-features = false, features = ["gssapi"] }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
simplelog = "0.9.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
base64 = "0.13.0"
bincode = "1.3.2"