[package]
name = "lt-kafka"
version = "0.1.0"
authors = ["Ilya Kramer <ilya@lightricks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lt_kafka"
crate-type = ["dylib"]

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3"
branch = "main"
features = ["extension-module"]

[dependencies]
rdkafka = { version = "0.26.0", default-features = false, features = ["gssapi"] }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
simplelog = "0.9.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
base64 = "0.13.0"
bincode = "1.3.2"
retry = "1.2.0"
rand = "0.8.3"